# ROS_cv

./: .gitignore  Dockerfile  Dockerfile_without_ws_for2rosOS  README.md  dock  docker_run.sh  entrypoint.sh  entrypoint_off.sh  entrypoint_oldest.sh  entrypoint_rosbridge.sh  error.txt  history.txt  husky_info_bag2.txt  hz.txt  into.sh  new_entrypoint.sh  oldest.sh  play_ros2bag.sh  point_cloud.txt  requirements.txt  ros2_play_bag.sh  rostopic_list_v.txt  rviz_conf_full.rviz  source_bridge.sh  source_ros2.sh
docker_data/: testdata_rviz.rviz
husky_tidy_bot_cv/: CMakeLists.txt  package.xml
husky_tidy_bot_cv/msg/: Detection.msg  Marker.msg  Objects.msg  Objects3d.msg
husky_tidy_bot_cv/scripts/: aruco_6dof_node.py  aruco_detection_service.py  aruco_node.py  aruco_node_with_6dof.py  bot_sort_node.py  combine_data.py  conversions.py  data_aggregator.py  data_aggregator_node.py  example.txt  object_point_cloud_extraction.py  object_point_cloud_extraction_node.py  object_pose_estimation_node.py  openseed_node.py  point_cloud_listener.py  tracker_3d.py  tracker_3d_node.py  visualize_objects_point_cloud.py  yolov8.py
husky_tidy_bot_cv/scripts/other/: bot_sort_node_new_august.py  object_pose_estimation_node_with3.py  openseed_node_with_aruco.py  tracker_3d.py  tracker_3d_node_modified.py  visualize_objects_point_cloud_old.py
husky_tidy_bot_cv/scripts/pose_estim_node/: openseed_node_with_aruco.py  yolov8_node_with_aruco.py
husky_tidy_bot_cv/srv/: DetectArucoMarker.srv  Reset.srv  SetObjectId.srv
modified_files/: Dockerfile_new  entrypoint.sh
ros2_ws/: CMakeLists.txt  package.xml
ros2_ws/msg/: Detection.msg  ObjectPointCloud.msg  ObjectPose.msg  Objects.msg  Objects3d.msg
ros2_ws/scripts/: aruco_detection_service.py  data_aggregator_node.py  object_pose_estimation_node.py  openseed_model.py  point_cloud_listener.py  tracker_3d.py  tracker_3d_node.py  vild_node.py  visualize_objects_point_cloud.py  yolov8_node.py
ros2_ws/scripts/other/: object_pose_estimation_node.py  openseed_node.py  tracker_3d_with_error_on_tracking_id.py
ros2_ws/srv/: Reset.srv  SetObjectId.srv
ros_bridge 2/__MACOSX/: ._ros_bridge
